first push, main functions, and  socket prototype server

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta content="ugh, hi." name="description">
-        <meta content="Makeup Webcam" name="title">
+        <meta content="Project Inmersion" name="title">
         <title>Makeup Webcam</title>
         <style>
          #container {
