--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
          #canvasElement {
              width: 640px;
              height: 480px;
-             display: none;
+             display: block;
          }
         </style>
     </head>
