--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta content="ugh, hi." name="description">
-        <meta content="Project Inmersion" name="title">
-        <title>Project Inmersion</title>
+        <meta content="Project Immersion" name="title">
+        <title>Makeup Webcam</title>
         <style>
          #container {
              margin: 0px auto;
@@ -25,7 +25,7 @@
          #canvasElement {
              width: 640px;
              height: 480px;
-             display: block;
+             display: none;
          }
         </style>
     </head>
@@ -42,3 +42,4 @@
         <script src="{{ url_for('static', filename='js/main.js') }}"></script>
     </body>
 </html>
+
