--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta content="ugh, hi." name="description">
         <meta content="Project Immersion" name="title">
-        <title>Makeup Webcam</title>
+        <title>Project Immersio</title>
         <style>
          #container {
              margin: 0px auto;
