--- a/Immersion_landing_page/templates/login.html
+++ b/Immersion_landing_page/templates/login.html
@@ -24,7 +24,8 @@
 
 <body class="bg-light">
 
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark"
+  style="background-image: url(../static/images/background2.jpg)">
   <a class="navbar-brand" href="/"> Immersion</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
