--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta content="ugh, hi." name="description">
         <meta content="Project Immersion" name="title">
-        <title>Project Immersio</title>
+        <title>Project Immersion</title>
         <style>
          #container {
              margin: 0px auto;
@@ -25,7 +25,7 @@
          #canvasElement {
              width: 640px;
              height: 480px;
-             display: block;
+             display: none;
          }
         </style>
     </head>
