--- a/templates/login.html
+++ b/templates/login.html
@@ -24,7 +24,8 @@
 
 <body class="bg-light">
 
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark"
+  style="background-image: url(../media/background2.jpg)">
   <a class="navbar-brand" href="/"> Immersion</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
@@ -75,7 +76,7 @@
   <!-- Single Image -->
     <div class="container">
         <img src="../media/Immersion1.jpg" class="mx-auto d-block img-fluid img-thumbnail"
-             alt="3D smartphone" width="500">
+        alt="3D smartphone" width="500">
     </div>
 
 <br><br>
