--- a/templates/signup.html
+++ b/templates/signup.html
@@ -31,7 +31,8 @@
 <body class="bg-light">
 
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark"
+    style="background-image: url(../media/background2.jpg)">
     <a class="navbar-brand" href="/"> Immersion</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
