--- a/templates/login.html
+++ b/templates/login.html
@@ -75,7 +75,7 @@
   <br><br>
   <!-- Single Image -->
     <div class="container">
-        <img src="../media/Immersion1.jpg" class="mx-auto d-block img-fluid img-thumbnail"
+        <img src="https://www.dropbox.com/s/gyffcaxsyctf0xp/Immersion1.jpg?dl=0" class="mx-auto d-block img-fluid img-thumbnail"
         alt="3D smartphone" width="500">
     </div>
 
