--- a/templates/login.html
+++ b/templates/login.html
@@ -75,7 +75,7 @@
   <br><br>
   <!-- Single Image -->
     <div class="container">
-        <img src="https://www.dropbox.com/s/gyffcaxsyctf0xp/Immersion1.jpg?dl=0" class="mx-auto d-block img-fluid img-thumbnail"
+        <img src="https://uc6927d01f82647db96da90e11b1.previews.dropboxusercontent.com/p/thumb/AA_eHHdDyl9VGW_eL0mfTivLMDoCQUqfKrPXudkRKUGfBNt-oRyk_S33zWf3NI1uBqk7Hiyo2GX_ELFouIdeZ47BRCQOPprKeYZag3jOfc8IKrOq7EHMt_99WLpcVe_HcjwyBD6qQTwdlINgXbTtvuaII4QoP96JWx2KWBLs_RWRfUgs0gmITHMQn3z9CEbZBMhmKXz0PK_EqBg1HqeZxbjdwYK3y9wfZJJE-OHhD40cFMwPsRTnTQsqxSZeOQkjexWFlEuacKSWyZ_v8DAJgBXQDsJbZgJKDhULdmd2YT4UdfLmjKUtFyEka-R5I9Q9FjGmmMgf9VFjfkeaYoBsW15UVXFMDPdxFmUy3R0LEXd73--Y650TtA_if1zaUT1N-lBulrPqBmzCTNafWUVqgo32/p.jpeg?fv_content=true&size_mode=5" class="mx-auto d-block img-fluid img-thumbnail"
         alt="3D smartphone" width="500">
     </div>
 
