--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <title>Immersion Project</title>
-  <link rel="shortcut icon" href="../media/logo_icon.ico">
+  <link rel="shortcut icon" href="https://raw.githubusercontent.com/AMIRANDA9112/Inmersion/integration_test/media/logo_icon.ico?token=AKN5O65CQG3F5S7GWFSQJOK7SJUIK">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -40,7 +40,7 @@
 <body class="bg-light">
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark"
-style="background-image: url(../media/background2.jpg)">
+style="background-image: url(https://dl.dropbox.com/s/de3eitpbjm2izrp/background2.jpg?dl=0)">
   <a class="navbar-brand" href="/"> Immersion</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
@@ -75,7 +75,7 @@ style="background-image: url(../media/background2.jpg)">
                 </p>
             </div>
             <div class="col-md-4">
-                <img src="../media/logo.gif" class="mx-auto d-block img-fluid mylogo">
+                <img src="https://dl.dropboxusercontent.com/s/tvaerh2rxq2zvuq/logo.gif?dl=0" class="mx-auto d-block img-fluid mylogo">
             </div>
         </div><br>
         <a href="signup" class="btn btn-block btn-lg bg-dark text-light font">
@@ -86,7 +86,7 @@ style="background-image: url(../media/background2.jpg)">
           <hr />
           <div class="row">
             <div class="col-md-4 center-block text-center">
-              <img src="../media/how_it_works1.jpg"
+              <img src="https://dl.dropbox.com/s/2ruovs33hr7tmtw/how_it_works1.jpg?dl=0"
               class="img-fluid rounded-circle mx-auto d-block" width="150" height="150">
               <p>
                 <h3>How does it work?</h3>
@@ -95,7 +95,7 @@ style="background-image: url(../media/background2.jpg)">
             </div>
 
             <div class="col-md-4 center-block text-center">
-              <img src="../media/video_chat.jpg"
+              <img src="https://dl.dropbox.com/s/omla90feticfk9a/video_chat.jpg?dl=0"
               class="img-fluid rounded-circle mx-auto d-block" width="150" height="150">
               <p class="d-block mx-auto">
                 <p>
@@ -106,7 +106,7 @@ style="background-image: url(../media/background2.jpg)">
               </div>
 
               <div class="col-md-4 center-block text-center">
-                <img src="../media/free2.jpg"
+                <img src="https://dl.dropbox.com/s/0vdn2d3a4a423wh/free2.jpg?dl=0"
                 class="img-fluid rounded-circle mx-auto d-block" width="150" height="150">
                 <p class="d-block mx-auto">
                 <p>
@@ -119,7 +119,7 @@ style="background-image: url(../media/background2.jpg)">
 
           <div class="row">
             <div class="col-md-4 center-block text-center">
-              <img src="../media/login1.png"
+              <img src="https://dl.dropbox.com/s/p9fa6v9prttjdfl/login1.png?dl=0"
                 class="img-fluid rounded-circle mx-auto d-block" width="150" height="150">
               <p>
                 <h3>How can I access the service?</h3>
@@ -130,7 +130,7 @@ style="background-image: url(../media/background2.jpg)">
             </div>
 
             <div class="col-md-4 center-block text-center">
-              <img src="../media/tools.png"
+              <img src="https://dl.dropboxusercontent.com/s/rqef1ry8xr4looj/tools.png?dl=0"
               class="img-fluid rounded-circle mx-auto d-block" width="150" height="150">
                 <p>
                   <h3>What are the aumented reality tools for?</h3>
@@ -141,7 +141,7 @@ style="background-image: url(../media/background2.jpg)">
               </div>
 
               <div class="col-md-4 center-block text-center">
-                <img src="../media/teaching.jpg"
+                <img src="https://dl.dropboxusercontent.com/s/6uaqp6ieduh0khi/teaching.jpg?dl=0"
                 class="img-fluid rounded-circle mx-auto d-block" width="150" height="150">
                 <p>
                   <h3>What are the main reasons for using Immersion?</h3>
@@ -157,7 +157,7 @@ style="background-image: url(../media/background2.jpg)">
 
         <div class="container">
         <video width="400" controls>
-            <source src="../media/miranda.mp4" type="video/mp4">
+            <source src="https://dl.dropboxusercontent.com/s/b2czklqbposet3d/miranda.mp4?dl=0" type="video/mp4">
         </video>
         </div>
 
