--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <title>Immersion Project</title>
-  <link rel="shortcut icon" href="../media/logo_icon.ico">
+  <link rel="shortcut icon" href="https://raw.githubusercontent.com/AMIRANDA9112/Inmersion/integration_test/media/logo_icon.ico?token=AKN5O65CQG3F5S7GWFSQJOK7SJUIK">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -25,7 +25,7 @@
 <body class="bg-light">
 
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark"
-  style="background-image: url(../media/background2.jpg)">
+  style="background-image: url(https://dl.dropbox.com/s/de3eitpbjm2izrp/background2.jpg?dl=0)">
   <a class="navbar-brand" href="/"> Immersion</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
@@ -75,7 +75,7 @@
   <br><br>
   <!-- Single Image -->
     <div class="container">
-        <img src="https://uc6927d01f82647db96da90e11b1.previews.dropboxusercontent.com/p/thumb/AA_eHHdDyl9VGW_eL0mfTivLMDoCQUqfKrPXudkRKUGfBNt-oRyk_S33zWf3NI1uBqk7Hiyo2GX_ELFouIdeZ47BRCQOPprKeYZag3jOfc8IKrOq7EHMt_99WLpcVe_HcjwyBD6qQTwdlINgXbTtvuaII4QoP96JWx2KWBLs_RWRfUgs0gmITHMQn3z9CEbZBMhmKXz0PK_EqBg1HqeZxbjdwYK3y9wfZJJE-OHhD40cFMwPsRTnTQsqxSZeOQkjexWFlEuacKSWyZ_v8DAJgBXQDsJbZgJKDhULdmd2YT4UdfLmjKUtFyEka-R5I9Q9FjGmmMgf9VFjfkeaYoBsW15UVXFMDPdxFmUy3R0LEXd73--Y650TtA_if1zaUT1N-lBulrPqBmzCTNafWUVqgo32/p.jpeg?fv_content=true&size_mode=5" class="mx-auto d-block img-fluid img-thumbnail"
+        <img src="https://dl.dropbox.com/s/e7hgu6dp03j0vwi/Immersion1.jpg?dl=0" class="mx-auto d-block img-fluid img-thumbnail"
         alt="3D smartphone" width="500">
     </div>
 
