--- a/templates/signup.html
+++ b/templates/signup.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <title>Immersion Project</title>
-  <link rel="shortcut icon" href="../media/logo_icon.ico">
+  <link rel="shortcut icon" href="https://raw.githubusercontent.com/AMIRANDA9112/Inmersion/integration_test/media/logo_icon.ico?token=AKN5O65CQG3F5S7GWFSQJOK7SJUIK">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -32,7 +32,7 @@
 
   <!-- Navbar -->
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark"
-    style="background-image: url(../media/background2.jpg)">
+    style="background-image: url(https://dl.dropbox.com/s/de3eitpbjm2izrp/background2.jpg?dl=0)">
     <a class="navbar-brand" href="/"> Immersion</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
