change video streaming quality, to 4 fps and 480 resolution

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
             <video autoplay="true" id="videoElement">
             </video>
             <img id="imageElement" src="{{ url_for('video_feed') }}">
-            <canvas id="canvasElement" width="640" height="480"></canvas>
+            <canvas id="canvasElement"></canvas>
         </div>
 
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g=" crossorigin="anonymous"></script>
