--- a/templates/home.html
+++ b/templates/home.html
@@ -54,7 +54,7 @@ style="background-image: url(https://dl.dropbox.com/s/de3eitpbjm2izrp/background
         <a class="nav-link" href="signup">Sign Up</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">About Us</a>
+        <a class="nav-link" href="about">About Us</a>
       </li>
     </ul>
   </div>
@@ -163,6 +163,17 @@ style="background-image: url(https://dl.dropbox.com/s/de3eitpbjm2izrp/background
 
 </div>
 <br>
+<!-- Footer -->
+<footer class="page-footer font-small blue">
+
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">© 2020 Copyright:
+    <a href="https://project-inmersion.herokuapp.com/">project-inmersion</a>
+  </div>
+  <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
 </body>
 
 </html>
