--- a/templates/signup.html
+++ b/templates/signup.html
@@ -22,7 +22,7 @@
   }
   .nav-item{
     font-size: 20px;
-  }   
+  }
 </style>
 <style>
 
@@ -46,10 +46,10 @@
           <a class="nav-link" href="signup">Sign Up</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About Us</a>
-        </li>    
+          <a class="nav-link" href="about">About Us</a>
+        </li>
       </ul>
-    </div>  
+    </div>
   </nav>
   <br><br>
     <!-- Header -->
@@ -136,7 +136,14 @@
     </form>
   </div>
 
-    
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">© 2020 Copyright:
+    <a href="https://project-inmersion.herokuapp.com/">project-inmersion</a>
+  </div>
+  <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
 </body>
 <br><br>
 </html>
