--- a/templates/upload_pag.html
+++ b/templates/upload_pag.html
@@ -19,7 +19,7 @@
 </div>
 
 <header class="navbar">
-    <form action="/upload" method="post" enctype="multipart/form-data" >
+    <form action="/streaming" method="post" enctype="multipart/form-data" >
         <div align="center">
             <label class="btn btn-default btn-file">
                 Browse <input type="file" name="PDF" style="display: none;">
