--- a/templates/upload_pag.html
+++ b/templates/upload_pag.html
@@ -22,7 +22,7 @@
     <form action="/streaming" method="post" enctype="multipart/form-data" >
         <div align="center">
             <label class="btn btn-default btn-file">
-                Browse <input type="file" name="PDF" style="display: none;">
+                Browse <input type="file" name="file" style="display: none;">
             </label>
             <input type="submit" value="Upload your PDF" class="btn btn-primary">
         </div>
