Continuing with about us

--- a/templates/about.html
+++ b/templates/about.html
@@ -84,11 +84,8 @@ style="background-image: url(https://dl.dropbox.com/s/de3eitpbjm2izrp/background
     <div class="container py-5">
       <div class="row h-100 align-items-center py-5">
         <div class="col-lg-6">
-          <h1 class="display-4">About us page</h1>
-          <p class="lead text-muted mb-0">Create a minimal about us page using Bootstrap 4.</p>
-          <p class="lead text-muted">Snippet by <a href="https://bootstrapious.com/snippets" class="text-muted"> 
-                      <u>Bootstrapious</u></a>
-          </p>
+          <h1 class="display-4">About us</h1>
+          <p class="lead text-muted mb-0">This is a page about our project and our presentation.</p>
         </div>
         <div class="col-lg-6 d-none d-lg-block"><img src="https://res.cloudinary.com/mhmd/image/upload/v1556834136/illus_kftyh4.png" alt="" class="img-fluid"></div>
       </div>
@@ -126,32 +123,32 @@ style="background-image: url(https://dl.dropbox.com/s/de3eitpbjm2izrp/background
       <div class="row text-center">
         <!-- Team item-->
         <div class="col-xl-3 col-sm-6 mb-5">
-          <div class="bg-white rounded shadow-sm py-5 px-4"><img src="https://res.cloudinary.com/mhmd/image/upload/v1556834130/avatar-3_hzlize.png" alt="" width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
-            <h5 class="mb-0">Manuella Nevoresky</h5><span class="small text-uppercase text-muted">CEO - Founder</span>
+          <div class="bg-white rounded shadow-sm py-5 px-4"><img src="https://holbertonintranet.s3.amazonaws.com/users/photos/000/001/642/thumb/MIA.jpg?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIARDDGGGOUWMNL5ANN%2F20201020%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20201020T222338Z&X-Amz-Expires=600&X-Amz-SignedHeaders=host&X-Amz-Signature=c85300d3e9e0429e487ebdf77549eb9a5d2c4a4f0f7b8a37b1b2043057a5dc40" alt="" width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
+            <h5 class="mb-0">Andres Miranda</h5><span class="small text-uppercase text-muted">Video Processing | Model Business</span>
           </div>
         </div>
         <!-- End-->
   
         <!-- Team item-->
         <div class="col-xl-3 col-sm-6 mb-5">
-          <div class="bg-white rounded shadow-sm py-5 px-4"><img src="https://res.cloudinary.com/mhmd/image/upload/v1556834130/avatar-3_hzlize.png" alt="" width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
-            <h5 class="mb-0">Samuel Hardy</h5><span class="small text-uppercase text-muted">CEO - Founder</span>
+          <div class="bg-white rounded shadow-sm py-5 px-4"><img src="https://holbertonintranet.s3.amazonaws.com/users/photos/000/001/523/thumb/IMG_20200501_215206.jpg?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIARDDGGGOUWMNL5ANN%2F20201020%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20201020T222449Z&X-Amz-Expires=600&X-Amz-SignedHeaders=host&X-Amz-Signature=f80f86a0fb38e4104dbe6d1a8f3a57d56c2a62cd3cf6cabfc83d485a4a6f5ade" alt="" width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
+            <h5 class="mb-0">Bryan Ortiz</h5><span class="small text-uppercase text-muted">Frontend JS</span>
             </div>
         </div>
         <!-- End-->
   
         <!-- Team item-->
         <div class="col-xl-3 col-sm-6 mb-5">
-          <div class="bg-white rounded shadow-sm py-5 px-4"><img src="https://res.cloudinary.com/mhmd/image/upload/v1556834133/avatar-2_f8dowd.png" alt="" width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
-            <h5 class="mb-0">Tom Sunderland</h5><span class="small text-uppercase text-muted">CEO - Founder</span>
+          <div class="bg-white rounded shadow-sm py-5 px-4"><img src="https://avatars3.githubusercontent.com/u/43767675?s=400&v=4" alt="" width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
+            <h5 class="mb-0">Luis Vargas</h5><span class="small text-uppercase text-muted">Backend API</span>
             </div>
         </div>
         <!-- End-->
   
         <!-- Team item-->
         <div class="col-xl-3 col-sm-6 mb-5">
-          <div class="bg-white rounded shadow-sm py-5 px-4"><img src="https://res.cloudinary.com/mhmd/image/upload/v1556834133/avatar-1_s02nlg.png" alt="" width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
-            <h5 class="mb-0">John Tarly</h5><span class="small text-uppercase text-muted">CEO - Founder</span>
+          <div class="bg-white rounded shadow-sm py-5 px-4"><img src="https://holbertonintranet.s3.amazonaws.com/users/photos/000/001/591/thumb/profile.jpeg?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIARDDGGGOUWMNL5ANN%2F20201020%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20201020T222555Z&X-Amz-Expires=600&X-Amz-SignedHeaders=host&X-Amz-Signature=78a4bebe788914aadae0d5331a82629f947b7576e980e4a967bc516eb9904b8f" alt="" width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
+            <h5 class="mb-0">Julian Cano</h5><span class="small text-uppercase text-muted">Frontend UI</span>
             </div>
         </div>
         <!-- End-->
