--- a/templates/upload_pag.html
+++ b/templates/upload_pag.html
@@ -14,7 +14,7 @@
         <p class = "lead"> Try uploading an image to see if a face is detected </p>
         <p> Your slides need upload in .PDF Format, a page for eac slide </p>
         <p> You only need put your palm hand in the low corners in the screen </p>
-        <p> By Project Inmerssion Team </p>
+        <p> By Project Immersion Team </p>
     </div>
 </div>
 
