--- a/templates/upload_pag.html
+++ b/templates/upload_pag.html
@@ -11,7 +11,7 @@
 <div class = "container">
     <div class = "starter-template">
         <h1>Upload your slides</h1>
-        <p class = "lead"> Try uploading an image to see if a face is detected </p>
+        <p class = "lead"> Upload your presentation in PDF Format </p>
         <p> Your slides need upload in .PDF Format, a page for eac slide </p>
         <p> You only need put your palm hand in the low corners in the screen </p>
         <p> By Project Immersion Team </p>
