--- a/templates/about.html
+++ b/templates/about.html
@@ -45,15 +45,14 @@
         border-radius: 50%;
         transition: all 0.3s;
         font-size: 0.9rem;
-    
 }
 
-.social-link:hover,
-.social-link:focus {
-  background: #ddd;
-  text-decoration: none;
-  color: #555;
-}
+    .social-link:hover,
+    .social-link:focus {
+      background: #ddd;
+      text-decoration: none;
+      color: #555;
+    }
 }
 </style>
 
@@ -123,16 +122,18 @@ style="background-image: url(https://dl.dropbox.com/s/de3eitpbjm2izrp/background
       <div class="row text-center">
         <!-- Team item-->
         <div class="col-xl-3 col-sm-6 mb-5">
-          <div class="bg-white rounded shadow-sm py-5 px-4"><img src="https://holbertonintranet.s3.amazonaws.com/users/photos/000/001/642/thumb/MIA.jpg?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIARDDGGGOUWMNL5ANN%2F20201020%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20201020T222338Z&X-Amz-Expires=600&X-Amz-SignedHeaders=host&X-Amz-Signature=c85300d3e9e0429e487ebdf77549eb9a5d2c4a4f0f7b8a37b1b2043057a5dc40" alt="" width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
-            <h5 class="mb-0">Andres Miranda</h5><span class="small text-uppercase text-muted">Video Processing | Model Business</span>
+          <div class="bg-white rounded shadow-sm py-5 px-4"><img src="https://avatars2.githubusercontent.com/u/60367661?s=400&u=5a2462983e80408325f3a3ba9c26d5366f4c3649&v=4" alt="" width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
+            <h5 class="mb-0">Andres Miranda</h5><span class="small text-uppercase text-muted">Video Processing | Model Business</span><br />
+            <span class="small text-uppercase text-muted"><a href="https://github.com/AMIRANDA9112" target="_blank">Github</a></span>
           </div>
         </div>
         <!-- End-->
   
         <!-- Team item-->
         <div class="col-xl-3 col-sm-6 mb-5">
-          <div class="bg-white rounded shadow-sm py-5 px-4"><img src="https://holbertonintranet.s3.amazonaws.com/users/photos/000/001/523/thumb/IMG_20200501_215206.jpg?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIARDDGGGOUWMNL5ANN%2F20201020%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20201020T222449Z&X-Amz-Expires=600&X-Amz-SignedHeaders=host&X-Amz-Signature=f80f86a0fb38e4104dbe6d1a8f3a57d56c2a62cd3cf6cabfc83d485a4a6f5ade" alt="" width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
-            <h5 class="mb-0">Bryan Ortiz</h5><span class="small text-uppercase text-muted">Frontend JS</span>
+          <div class="bg-white rounded shadow-sm py-5 px-4"><img src="https://avatars0.githubusercontent.com/u/56614630?s=400&u=12dda68d035cb01a54dffd9798a662b95400f660&v=4" alt="" width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
+            <h5 class="mb-0">Bryan Ortiz</h5><span class="small text-uppercase text-muted">Frontend JS</span><br />
+            <span class="small text-uppercase text-muted"><a href="https://github.com/bryano13" target="_blank">Github</a></span>
             </div>
         </div>
         <!-- End-->
@@ -140,15 +141,17 @@ style="background-image: url(https://dl.dropbox.com/s/de3eitpbjm2izrp/background
         <!-- Team item-->
         <div class="col-xl-3 col-sm-6 mb-5">
           <div class="bg-white rounded shadow-sm py-5 px-4"><img src="https://avatars3.githubusercontent.com/u/43767675?s=400&v=4" alt="" width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
-            <h5 class="mb-0">Luis Vargas</h5><span class="small text-uppercase text-muted">Backend API</span>
+            <h5 class="mb-0">Luis Vargas</h5><span class="small text-uppercase text-muted">Backend API</span><br />
+            <span class="small text-uppercase text-muted"><a href="https://github.com/LuAnVaRmO" target="_blank">Github</a></span>
             </div>
         </div>
         <!-- End-->
   
         <!-- Team item-->
         <div class="col-xl-3 col-sm-6 mb-5">
-          <div class="bg-white rounded shadow-sm py-5 px-4"><img src="https://holbertonintranet.s3.amazonaws.com/users/photos/000/001/591/thumb/profile.jpeg?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIARDDGGGOUWMNL5ANN%2F20201020%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20201020T222555Z&X-Amz-Expires=600&X-Amz-SignedHeaders=host&X-Amz-Signature=78a4bebe788914aadae0d5331a82629f947b7576e980e4a967bc516eb9904b8f" alt="" width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
-            <h5 class="mb-0">Julian Cano</h5><span class="small text-uppercase text-muted">Frontend UI</span>
+          <div class="bg-white rounded shadow-sm py-5 px-4"><img src="https://avatars3.githubusercontent.com/u/34167878?s=400&u=0954afe55077a4b4ce4cc4414082b91e622eabfc&v=4" alt="" width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
+            <h5 class="mb-0">Julian Cano</h5><span class="small text-uppercase text-muted">Frontend UI</span><br />
+            <span class="small text-uppercase text-muted"><a href="https://github.com/JulianCanoDev" target="_blank">Github</a></span>
             </div>
         </div>
         <!-- End-->
