Upgraded several files (templates and app.py)
for all templates, I added the icon link.
Added Julian work to the aboutUs template. Also filled all the text.
Corrected function of upload_page from app.py. Adding if request.form == POST:

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <title>Immersion Project</title>
-  <link rel="shortcut icon" href="https://raw.githubusercontent.com/AMIRANDA9112/Inmersion/integration_test/media/logo_icon.ico?token=AKN5O65CQG3F5S7GWFSQJOK7SJUIK">
+  <link rel="shortcut icon" href="https://raw.githubusercontent.com/AMIRANDA9112/Inmersion/master/media/logo_icon.ico?token=ANP55ZR3BETBZO6MXEPZ4OS7TUIP6">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -150,11 +150,12 @@
         <!-- Button -->
           <button type="submit" class="btn btn-primary mx-auto d-block btn-lg">Submit</button>
     </form><br>
-  </div>
+  </div><br>
 
+<footer>
   <!-- Copyright -->
   <div class="footer-copyright text-center py-3">© 2020 Copyright:
-    <a href="https://project-inmersion.herokuapp.com/">project-inmersion</a>
+    <a href="https://project-inmersion.herokuapp.com/">project-immersion</a>
   </div>
   <!-- Copyright -->
 
