--- a/templates/about.html
+++ b/templates/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <title>Immersion Project</title>
-  <link rel="shortcut icon" href="https://raw.githubusercontent.com/AMIRANDA9112/Inmersion/integration_test/media/logo_icon.ico?token=AKN5O65CQG3F5S7GWFSQJOK7SJUIK">
+  <link rel="shortcut icon" href="https://raw.githubusercontent.com/AMIRANDA9112/Inmersion/master/media/logo_icon.ico?token=ANP55ZR3BETBZO6MXEPZ4OS7TUIP6">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
   integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 
 <style>
@@ -79,33 +80,48 @@ style="background-image: url(https://dl.dropbox.com/s/de3eitpbjm2izrp/background
     </ul>
   </div>
 </nav>
-<br><br>
-  <div class="bg-light">
-    <div class="container py-5">
-      <div class="row h-100 align-items-center py-5">
-        <div class="col-lg-6">
+
+  <div class="w3-indigo">
+    <div class="container py-4">
+      <div class="row h-100 align-items-center py-2">
+        <div class="col-lg-8">
           <h1 class="display-4">About us</h1>
-          <p class="lead text-muted mb-0">This is a page about our project and our presentation.</p>
+          <p class="lead mb-0 text-light"><strong>Get to know a bit more about Project Immersion and the 
+            team behind it.</strong></p>
         </div>
-        <div class="col-lg-6 d-none d-lg-block"><img src="https://res.cloudinary.com/mhmd/image/upload/v1556834136/illus_kftyh4.png" alt="" class="img-fluid"></div>
+        <div class="col-lg-4 d-none d-lg-block"><img src="https://dl.dropboxusercontent.com/s/tvaerh2rxq2zvuq/logo.gif?dl=0" alt="" class="img-fluid"
+          width="300"></div>
       </div>
     </div>
   </div>
   
-  <div class="bg-white py-5">
-    <div class="container py-5">
+  <div class="bg-white py-3 bg-light">
+    <div class="container py-3">
       <div class="row align-items-center mb-5">
         <div class="col-lg-6 order-2 order-lg-1"><i class="fa fa-bar-chart fa-2x mb-3 text-primary"></i>
-          <h2 class="font-weight-light">Lorem ipsum dolor sit amet</h2>
-          <p class="font-italic text-muted mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><a href="#" class="btn btn-light px-5 rounded-pill shadow-sm">Learn More</a>
+          <h2 class="font-weight-light">A lot has changed in 2020.</h2>
+          <p class="font-italic text-muted mb-4">
+            Due to the covid-19 global pandemic, businesses across virtually every industry
+            have been forced to change their 'status quo'. Basic tasks, such as meetings
+            and presentations, are no longer conducted in face-to-face formats. Therefore the
+            need for video-chat platforms has incresed dramatically.
+          </p><a href="#" class="btn btn-light px-5 rounded-pill shadow-sm">Learn More</a>
         </div>
         <div class="col-lg-5 px-5 mx-auto order-1 order-lg-2"><img src="https://res.cloudinary.com/mhmd/image/upload/v1556834139/img-1_e25nvh.jpg" alt="" class="img-fluid mb-4 mb-lg-0"></div>
       </div>
       <div class="row align-items-center">
         <div class="col-lg-5 px-5 mx-auto"><img src="https://res.cloudinary.com/mhmd/image/upload/v1556834136/img-2_vdgqgn.jpg" alt="" class="img-fluid mb-4 mb-lg-0"></div>
         <div class="col-lg-6"><i class="fa fa-leaf fa-2x mb-3 text-primary"></i>
-          <h2 class="font-weight-light">Lorem ipsum dolor sit amet</h2>
-          <p class="font-italic text-muted mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><a href="#" class="btn btn-light px-5 rounded-pill shadow-sm">Learn More</a>
+          <h2 class="font-weight-light">
+            Augmented reality tools as a plugin.
+          </h2>
+          <p class="font-italic text-muted mb-4">
+            But for many people, the need to see a face talking while someone presents
+            their slides is very important to keep engaged in the presentation.
+            Likewese, for the presenter to be able to stand up and use his hands may be
+            very usefull at the moment of explainig something that requires the whiteboard.
+            This are the main advantages of using our plugin for video-chat platforms. 
+          </p><a href="#" class="btn btn-light px-5 rounded-pill shadow-sm">Learn More</a>
         </div>
       </div>
     </div>
@@ -123,16 +139,18 @@ style="background-image: url(https://dl.dropbox.com/s/de3eitpbjm2izrp/background
       <div class="row text-center">
         <!-- Team item-->
         <div class="col-xl-3 col-sm-6 mb-5">
-          <div class="bg-white rounded shadow-sm py-5 px-4"><img src="https://holbertonintranet.s3.amazonaws.com/users/photos/000/001/642/thumb/MIA.jpg?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIARDDGGGOUWMNL5ANN%2F20201020%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20201020T222338Z&X-Amz-Expires=600&X-Amz-SignedHeaders=host&X-Amz-Signature=c85300d3e9e0429e487ebdf77549eb9a5d2c4a4f0f7b8a37b1b2043057a5dc40" alt="" width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
-            <h5 class="mb-0">Andres Miranda</h5><span class="small text-uppercase text-muted">Video Processing | Model Business</span>
+          <div class="bg-white rounded shadow-sm py-5 px-4"><img src="https://avatars2.githubusercontent.com/u/60367661?s=400&u=5a2462983e80408325f3a3ba9c26d5366f4c3649&v=4" alt="" width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
+            <h5 class="mb-0">Andres Miranda</h5><span class="small text-uppercase text-muted">Video Processing<br>Business Model</span><br />
+            <span class="small text-uppercase text-muted"><a href="https://github.com/AMIRANDA9112" target="_blank">Github</a></span>
           </div>
         </div>
         <!-- End-->
   
         <!-- Team item-->
         <div class="col-xl-3 col-sm-6 mb-5">
-          <div class="bg-white rounded shadow-sm py-5 px-4"><img src="https://holbertonintranet.s3.amazonaws.com/users/photos/000/001/523/thumb/IMG_20200501_215206.jpg?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIARDDGGGOUWMNL5ANN%2F20201020%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20201020T222449Z&X-Amz-Expires=600&X-Amz-SignedHeaders=host&X-Amz-Signature=f80f86a0fb38e4104dbe6d1a8f3a57d56c2a62cd3cf6cabfc83d485a4a6f5ade" alt="" width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
-            <h5 class="mb-0">Bryan Ortiz</h5><span class="small text-uppercase text-muted">Frontend JS</span>
+          <div class="bg-white rounded shadow-sm py-5 px-4"><img src="https://avatars0.githubusercontent.com/u/56614630?s=400&u=12dda68d035cb01a54dffd9798a662b95400f660&v=4" alt="" width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
+            <h5 class="mb-0">Bryan Ortiz</h5><span class="small text-uppercase text-muted">Frontend JS</span><br><br>
+            <span class="small text-uppercase text-muted"><a href="https://github.com/bryano13" target="_blank">Github</a></span>
             </div>
         </div>
         <!-- End-->
@@ -140,15 +158,17 @@ style="background-image: url(https://dl.dropbox.com/s/de3eitpbjm2izrp/background
         <!-- Team item-->
         <div class="col-xl-3 col-sm-6 mb-5">
           <div class="bg-white rounded shadow-sm py-5 px-4"><img src="https://avatars3.githubusercontent.com/u/43767675?s=400&v=4" alt="" width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
-            <h5 class="mb-0">Luis Vargas</h5><span class="small text-uppercase text-muted">Backend API</span>
+            <h5 class="mb-0">Luis Vargas</h5><span class="small text-uppercase text-muted">Backend API</span><br><br>
+            <span class="small text-uppercase text-muted"><a href="https://github.com/LuAnVaRmO" target="_blank">Github</a></span>
             </div>
         </div>
         <!-- End-->
   
         <!-- Team item-->
         <div class="col-xl-3 col-sm-6 mb-5">
-          <div class="bg-white rounded shadow-sm py-5 px-4"><img src="https://holbertonintranet.s3.amazonaws.com/users/photos/000/001/591/thumb/profile.jpeg?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIARDDGGGOUWMNL5ANN%2F20201020%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20201020T222555Z&X-Amz-Expires=600&X-Amz-SignedHeaders=host&X-Amz-Signature=78a4bebe788914aadae0d5331a82629f947b7576e980e4a967bc516eb9904b8f" alt="" width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
-            <h5 class="mb-0">Julian Cano</h5><span class="small text-uppercase text-muted">Frontend UI</span>
+          <div class="bg-white rounded shadow-sm py-5 px-4"><img src="https://avatars3.githubusercontent.com/u/34167878?s=400&u=0954afe55077a4b4ce4cc4414082b91e622eabfc&v=4" alt="" width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
+            <h5 class="mb-0">Julian Cano</h5><span class="small text-uppercase text-muted">Frontend UI</span><br><br>
+            <span class="small text-uppercase text-muted"><a href="https://github.com/JulianCanoDev" target="_blank">Github</a></span>
             </div>
         </div>
         <!-- End-->
@@ -158,7 +178,7 @@ style="background-image: url(https://dl.dropbox.com/s/de3eitpbjm2izrp/background
   </div>
   <!-- Copyright -->
 <div class="footer-copyright text-center py-3">© 2020 Copyright:
-    <a href="https://project-inmersion.herokuapp.com/">project-inmersion</a>
+    <a href="https://project-inmersion.herokuapp.com/">project-immersion</a>
   </div>
   <!-- Copyright -->
   
