--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <title>Immersion Project</title>
-  <link rel="shortcut icon" href="https://raw.githubusercontent.com/AMIRANDA9112/Inmersion/integration_test/media/logo_icon.ico?token=AKN5O65CQG3F5S7GWFSQJOK7SJUIK">
+  <link rel="shortcut icon" href="https://raw.githubusercontent.com/AMIRANDA9112/Inmersion/master/media/logo_icon.ico?token=ANP55ZR3BETBZO6MXEPZ4OS7TUIP6">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -74,7 +74,7 @@
     <div class="alert alert-success alert-dismissible">
       <strong class=>{{ message_success }}</strong>
     </div>
-    <a href="streaming" class="btn btn-block bg-danger text-light font w3-border-black">
+    <a href="upload_page" class="btn btn-block bg-danger text-light font w3-border-black">
       Start using the extension</a>.
     {% endif %}
     {% if message_failure %}
@@ -93,7 +93,7 @@
 <br><br>
 <!-- Copyright -->
 <div class="footer-copyright text-center py-3">© 2020 Copyright:
-  <a href="https://project-inmersion.herokuapp.com/">project-inmersion</a>
+  <a href="https://project-inmersion.herokuapp.com/">project-immersion</a>
 </div>
 <!-- Copyright -->
 
