--- a/templates/upload_pag.html
+++ b/templates/upload_pag.html
@@ -1,33 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-     <title>Upload Section</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <title>Immersion Project</title>
+  <link rel="shortcut icon" href="https://raw.githubusercontent.com/AMIRANDA9112/Inmersion/master/media/logo_icon.ico?token=ANP55ZR3BETBZO6MXEPZ4OS7TUIP6">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+  integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 </head>
+<style>
+    .navbar-brand{
+      font-size: 24px;
+    }
+    .nav-item{
+      font-size: 20px;
+    }
+    .font{
+      font-family: "Roboto";
+      font-size: 24px;
+      color: rgba(0, 0, 0, 0.671);
+    }
+    .font1{
+      font-family: "Roboto";
+      font-size: 20px;
+      color: rgba(0, 0, 0, 0.986);
+    }
+</style>
 
 <body>
 
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark"
+    style="background-image: url(https://dl.dropbox.com/s/de3eitpbjm2izrp/background2.jpg?dl=0)">
+    <a class="navbar-brand" href="/"> Immersion</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="login">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="signup">Sign Up</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="about">About Us</a>
+        </li>    
+      </ul>
+    </div>  
+  </nav>
+  <br><br>
+
 <div class = "container">
     <div class = "starter-template">
-        <h1>Upload your slides</h1>
-        <p class = "lead"> Upload your presentation in PDF Format </p>
-        <p> Your slides need upload in .PDF Format, a page for eac slide </p>
-        <p> You only need put your palm hand in the low corners in the screen </p>
-        <p> By Project Immersion Team </p>
+        <h1>Upload your slides</h1><br>
+        <h4> Upload your presentation in PDF Format </h4><br>
+        <p class="font1"> Your presentation must be uploaded in .PDF format,
+        a page for each slide. Once you start presenting, you only need to put 
+        the palm of your hand in the low corners of the screen to swich slides.
+        <br><br>
+        By Project Immersion Team.</p>
+    </div>
+
+    <form action="/upload_page" method="POST" enctype="multipart/form-data">
+        <div class="form-group">
+            <input type="file" class="form-control-file border" name="file">
+        </div>
+        <button type="submit" class="btn btn-primary btn-block">
+            Upload your PDF<a href="upload_page" ></a>
+        </button>
+    </form><br><br>
+    <!-- Single Image -->
+    <div class="container">
+        <img src="https://www.freeiconspng.com/uploads/pdf-icon-png-17.png" class="mx-auto d-block img-fluid img-thumbnail"
+        alt="pdf_file" width="400">
     </div>
 </div>
-
-<header class="navbar">
-    <form action="/upload" method="post" enctype="multipart/form-data" >
-        <div align="center">
-            <label class="btn btn-default btn-file">
-                Browse <input type="file" name="file" style="display: none;">
-            </label>
-            <input type="submit" value="Upload your PDF" class="btn btn-primary">
-        </div>
-    </form>
-</header>
 
 </body>
 </html>
