hands buttoms problems

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,11 +10,23 @@
              margin: 0px auto;
              border: 10px #333 solid;
          }
+         #videoElement {
+             width: 180px;
+             height: 480px;
+             background-color: #666;
+             display: None;
+         }
 
          #imageElement {
              width: 1048px;
              height: 720px;
              background-color: #666;
+         }
+
+         #canvasElement {
+             width: 640px;
+             height: 480px;
+             display: None;
          }
         </style>
     </head>
