--- a/templates/home.html
+++ b/templates/home.html
@@ -157,7 +157,7 @@ style="background-image: url(https://dl.dropbox.com/s/de3eitpbjm2izrp/background
 
         <div class="container">
         <video width="400" controls>
-            <source src="../media/miranda.mp4" type="video/mp4">
+            <source src="https://www.dropbox.com/s/i80kayfrdd8qezq/miranda.mp4?dl=0" type="video/mp4">
         </video>
         </div>
 
