--- a/templates/home.html
+++ b/templates/home.html
@@ -156,9 +156,9 @@ style="background-image: url(https://dl.dropbox.com/s/de3eitpbjm2izrp/background
         </div>
 
         <div class="container">
-        <video width="400" controls>
-            <source src="https://www.dropbox.com/s/i80kayfrdd8qezq/miranda.mp4?dl=0" type="video/mp4">
-        </video>
+            <iframe width="420" height="315"
+                src="https://www.youtube.com/embed/CkzoJ8vOJ9c?autoplay=1&mute=1">
+            </iframe>
         </div>
 
 </div>
