deleted  __pycache__/index.cpython-38.pyc and edited some text on aboutUs file

--- a/templates/about.html
+++ b/templates/about.html
@@ -116,11 +116,11 @@ style="background-image: url(https://dl.dropbox.com/s/de3eitpbjm2izrp/background
             Augmented reality tools as a plugin.
           </h2>
           <p class="font-italic text-muted mb-4">
-            But For many people, the need to see a face talking while someone presents their
+            But for many people, the need to see a face talking while someone presents their
             slides is very important to keep engaged in the presentation.
             Likewise, for the presenter to be able to stand up and use his hands may
             be very useful at the moment of explaining something that requires the whiteboard.
-            This are the main advantages of using our plugin for video-chat platforms. 
+            These are the main advantages of using our plugin for video-chat platforms. 
           </p><a href="#" class="btn btn-light px-5 rounded-pill shadow-sm">Learn More</a>
         </div>
       </div>
