--- a/templates/home.html
+++ b/templates/home.html
@@ -156,9 +156,12 @@ style="background-image: url(https://dl.dropbox.com/s/de3eitpbjm2izrp/background
         </div>
 
         <div class="container">
-            <iframe width="1048" height="720" control
-                src="https://www.youtube.com/embed/CkzoJ8vOJ9c?autoplay=1&mute=1">
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe class="embed-responsive-item"
+                src="https://www.youtube.com/embed/CkzoJ8vOJ9c?autoplay=1&mute=1"
+                allowfullscreen>
             </iframe>
+          </div>
         </div>
 
 </div>
