Deleted Bootstrap.html dummie page and added some comments to home.html page.

--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,7 @@
   integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 </head>
-
+<!--Style Section-->
 <style>
   video {
       width: 100%;
@@ -38,7 +38,7 @@
 </style>
 
 <body class="bg-light">
-
+<!-- Navigation Bar section -->
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark"
 style="background-image: url(https://dl.dropbox.com/s/de3eitpbjm2izrp/background2.jpg?dl=0)">
   <a class="navbar-brand" href="/"> Immersion</a>
@@ -60,8 +60,7 @@ style="background-image: url(https://dl.dropbox.com/s/de3eitpbjm2izrp/background
   </div>
 </nav>
 <br><br>
-
-<body class="bg-light">
+    <!--Introdution and main title-->
     <div class="container">
         <div class="row">
             <div class="col-md-8 text-center text-md-left pr-md-6">
